content/_generated-doc/2.7/config/quarkus-elytron-security-ldap.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-elytron-security-ldap_configuration]]link:#quarkus-elytron-security-ldap_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-ldap_quarkus.security.ldap.enabled]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.enabled[quarkus.security.ldap.enabled]`

[.description]
--
The option to enable the ldap elytron module
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-ldap_quarkus.security.ldap.realm-name]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.realm-name[quarkus.security.ldap.realm-name]`

[.description]
--
The elytron realm name
--|string 
|`Quarkus`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.direct-verification]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.direct-verification[quarkus.security.ldap.direct-verification]`

[.description]
--
Provided credentials are verified against ldap?
--|boolean 
|`true`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.url]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.url[quarkus.security.ldap.dir-context.url]`

[.description]
--
The url of the ldap server
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.principal]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.principal[quarkus.security.ldap.dir-context.principal]`

[.description]
--
The principal: user which is used to connect to ldap server (also named "bindDn")
--|string 
|


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.password]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.password[quarkus.security.ldap.dir-context.password]`

[.description]
--
The password which belongs to the principal (also named "bindCredential")
--|string 
|


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.referral-mode]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.referral-mode[quarkus.security.ldap.dir-context.referral-mode]`

[.description]
--
how ldap redirects are handled
--|`ignore`, `follow`, `throw` 
|`ignore`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.rdn-identifier]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.rdn-identifier[quarkus.security.ldap.identity-mapping.rdn-identifier]`

[.description]
--
The identifier which correlates to the provided user (also named "baseFilter")
--|string 
|`uid`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.search-base-dn]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.search-base-dn[quarkus.security.ldap.identity-mapping.search-base-dn]`

[.description]
--
The dn where we look for users
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.search-recursive]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.search-recursive[quarkus.security.ldap.identity-mapping.search-recursive]`

[.description]
--
If the child nodes are also searched for identities
--|boolean 
|`false`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.from]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.from[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".from]`

[.description]
--
The roleAttributeId from which is mapped (e.g. "cn")
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.to]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.to[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".to]`

[.description]
--
The identifier whom the attribute is mapped to (in Quarkus: "groups", in WildFly this is "Roles")
--|string 
|`groups`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".filter]`

[.description]
--
The filter (also named "roleFilter")
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter-base-dn]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter-base-dn[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".filter-base-dn]`

[.description]
--
The filter base dn (also named "rolesContextDn")
--|string 
|required icon:exclamation-circle[title=Configuration property is required]

|===